C4 kandidat b: seam ShizukuGateway ganti mockStatic, revert JVM arg kandidat a